登陆模块大致完成

--- a/【驴伙伴】接口文档.md
+++ b/【驴伙伴】接口文档.md
@@ -183,26 +183,60 @@
 
 
 
-
 ## 5. 我的 user
-- 微信授权登陆： `/user/wxLogin` 
+
+### 1. 用户信息
+
+- 微信授权首次登陆(注册)： `/user/wxRegister` 
 
   - 前端请求： 
 
     ```json
     {
     	code //code 码
+        nickName //昵称
+    	gender //性别 0：女 1：男
+    	avatarUrl //头像
     }
     ```
 
   - 后端返回：
 
+    - 未收到前端传值
+
+      ```json
+      {
+          openId:-1 //返回 -1 表示出错，提示用户重新授权登录
+      }
+      ```
+
+    - 收到前端传值并正确获取
+
+      ```json
+      {
+      	openId //openid + session_key
+      	nickName //昵称
+      	gender //性别 0：女 1：男
+      	avatarUrl //头像
+          //其他字段为空
+      }
+      ```
+
+- 微信登陆时进行身份验证： `/user/wxLogin`
+
+  - 前端请求： 
+
     ```json
     {
-    	openId //openid + session_key
-    	nickName //昵称
-    	gender //性别 0：女 1：男
-    	avatarUrl //头像
+        code //code 码
+    }
+    ```
+
+  - 后台返回：
+
+    ```json
+    {
+        openId //与 storage 中的 openId 进行比较，相同则未改变，不同则改变
     }
     ```
 
@@ -212,8 +246,7 @@
 
     ```json
     {
-    	openId //前面的用户唯一 id：openid + session_key
-    	hustImage //学生证照片（备注：有该照片才能进行操作，否则只能看，不能租车、发布信息等）
+    	openId //前面的用户唯一 id：openid
     	college //学院：软件学院
     	grade //年级：16级
     	area //宿舍区：韵苑
@@ -229,9 +262,52 @@
 
     ```json
     {
-    	status:200
+    	openId //openid
+    	nickName //昵称
+    	gender //性别 0：女 1：男
+    	avatarUrl //头像
+        hustImage //学生证照片（备注：有该照片才能进行操作，否则只能看，不能租车、发布信息等）
+    	college //学院：软件学院
+    	grade //年级：16级
+    	area //宿舍区：韵苑
+    	areaNum //楼栋：16栋
+    	weixin
+        rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
+        used //二手车信息展示 0：未发布 1：发布未出售 2：发布未出售
     }
     ```
+
+- 上传学生证照片：`/user/upload`
+
+  - 前端请求
+
+    ```json
+    {
+        openId //前面的用户唯一 id：openid
+        hustImage //学生证照片（备注：有该照片才能进行操作，否则只能看，不能租车、发布信息等）
+    }
+    ```
+
+  - 后端返回：
+
+    ```json
+    {
+        openId //openid
+    	nickName //昵称
+    	gender //性别 0：女 1：男
+    	avatarUrl //头像
+        hustImage //学生证照片（备注：有该照片才能进行操作，否则只能看，不能租车、发布信息等）
+    	college //学院：软件学院
+    	grade //年级：16级
+    	area //宿舍区：韵苑
+    	areaNum //楼栋：16栋
+    	weixin
+        rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
+        used //二手车信息展示 0：未发布 1：发布未出售 2：发布未出售
+    }
+    ```
+
+### 2. 我的出租
 
 - 我的出租： 
 
@@ -322,6 +398,8 @@
       }
       ```
 
+### 3. 我的求租
+
 - 我的求租： 
 
   - 查看： `/user/publish/list` 
@@ -375,6 +453,8 @@
           msg: OK
       }
       ```
+
+### 4. 我的二手车
 
 - 我的二手车： `/user/used` 
 
