新功能添加

--- a/【驴伙伴】接口文档.md
+++ b/【驴伙伴】接口文档.md
@@ -84,68 +84,66 @@
     ```
 
 ## 2. 想租车 publish
-- 页面自动加载租车信息： `/publish/list` 
+- 查看接口：`/publish/list` 
 
-  - 查看接口：
+  - 前端请求： 在 `onLoad()` 中自动请求该接口
 
-    - 前端请求： 在 `onLoad()` 中自动请求该接口
+  - 后台返回：
 
-    - 后台返回：
+    ```json
+    [
+        {
+            publishId //帖子 id
+            openId //发布者id
+            nickName //发布者昵称
+            gender //性别 0：女 1：男
+            avatarUrl //发布者头像
+            area //发布者宿舍区：韵苑
+    		areaNum //发布者楼栋：16栋（传数字）
+            weixin //微信号
+            message //发布信息
+            money //租车赏金
+            yyyy //求租年月日： yyyy-MM-dd
+            week //求租周几： 1->周一,2-->周二
+            beginTime //求租的开始时间 hh:mm
+            endTime //求租的结束时间 hh:mm
+            createTime //创建时间（备注： 显示：1小时前，传值：时间戳）
+        },
+        {
+            //...
+        }
+    ]
+    ```
 
-      ```json
-      [
-          {
-              publishId //帖子 id
-              openId //发布者id
-              nickName //发布者昵称
-              gender //性别 0：女 1：男
-              avatarUrl //发布者头像
-              area //发布者宿舍区：韵苑
-      		areaNum //发布者楼栋：16栋（传数字）
-              weixin //微信号
-              message //发布信息
-              money //租车赏金
-              yyyy //求租年月日： yyyy-MM-dd
-              week //求租周几： 1->周一,2-->周二
-              beginTime //求租的开始时间 hh:mm
-              endTime //求租的结束时间 hh:mm
-              createTime //创建时间（备注： 显示：1小时前，传值：时间戳）
-          },
-          {
-              //...
-          }
-      ]
-      ```
+- 发布：`/publish/add` 
 
-  - 发布：
+  - 前端请求：
 
-    - 前端请求：
+    ```json
+    {
+        openId //发布者id
+        nickName //发布者昵称
+        gender //性别 0：女 1：男
+        avatarUrl //发布者头像
+        area //发布者宿舍区：韵苑
+        areaNum //发布者楼栋：16栋（传数字）
+        weixin //微信号
+        message //发布信息
+        money //租车赏金
+        yyyy //求租年月日： yyyy-MM-dd
+        week //求租周几： 1->周一,2-->周二
+        beginTime //求租的开始时间 hh:mm
+        endTime //求租的结束时间 hh:mm
+    }
+    ```
 
-      ```json
-      {
-          openId //发布者id
-          nickName //发布者昵称
-          gender //性别 0：女 1：男
-          avatarUrl //发布者头像
-          area //发布者宿舍区：韵苑
-          areaNum //发布者楼栋：16栋（传数字）
-          weixin //微信号
-          message //发布信息
-          money //租车赏金
-          yyyy //求租年月日： yyyy-MM-dd
-          week //求租周几： 1->周一,2-->周二
-          beginTime //求租的开始时间 hh:mm
-          endTime //求租的结束时间 hh:mm
-      }
-      ```
+  - 后台返回：
 
-    - 后台返回：
-
-      ```json
-      {
-          status:200
-      }
-      ```
+    ```json
+    {
+        openId
+    }
+    ```
 
 ## 3. 二手车 used
 
@@ -325,6 +323,38 @@
 
       ```json
       {
+          rent:{
+              rentId //帖子id
+              openId //发布者id
+              nickName //发布者昵称
+              gender //性别 0：女 1：男
+              avatarUrl //发布者头像
+              area //发布者宿舍区：韵苑
+              areaNum //发布者楼栋：16栋（传数字）
+              weixin //微信号
+              message //备注
+              money //租车赏金
+              manned //能否载人
+              rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
+              carImage //车辆图片
+              time //创建或修改时间（备注： 显示：1小时前，传值：时间戳）
+          },
+          rentTime:[
+                      {
+                          week //求租周几： 周五
+                          beginTime //求租的开始时间 hh:mm
+                          endTime //求租的结束时间
+                      }	
+                    ]
+      }
+      ```
+
+  - 修改或添加：`/user/rent/add`
+
+    - 前端请求： 
+
+      ```json
+      {
           rentId //帖子id
           openId //发布者id
           nickName //发布者昵称
@@ -335,30 +365,6 @@
           weixin //微信号
           message //备注
           money //租车赏金
-          carImage //车辆图片
-          manned //0:可载人 1：不可 2：不限
-          rentTime:[
-                      {
-                          week //求租周几： 1->周一,2-->周二
-                          beginTime //求租的开始时间 hh:mm
-                          endTime //求租的结束时间
-                      }	
-                    ]
-          time //创建或修改时间（备注： 显示：1小时前，传值：时间戳）
-      	rent //1：发布展示 2：发布未展示
-      }
-      ```
-
-  - 修改：`/user/rent/change`
-
-    - 前端请求： 
-
-      ```json
-      {
-          rentId //帖子id
-          openId //发布者id
-          message //备注
-          money //租车赏金
           manned //能否载人
           rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
           carImage //车辆图片
@@ -369,9 +375,6 @@
                           endTime //求租的结束时间
                       }	
                     ]
-      	time //创建或修改时间（备注： 显示：1小时前，传值：时间戳）
-      	//user 表与 rent 表
-      	rent //1：发布展示 2：发布未展示
       }
       ```
 
@@ -379,13 +382,22 @@
 
       ```json
       {
-          rentId //帖子id
-          openId //发布者id
-          message //备注
-          money //租车赏金
-          manned //能否载人
-          rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
-          carImage //车辆图片
+          rent:{
+              rentId //帖子id
+              openId //发布者id
+              nickName //发布者昵称
+              gender //性别 0：女 1：男
+              avatarUrl //发布者头像
+              area //发布者宿舍区：韵苑
+              areaNum //发布者楼栋：16栋（传数字）
+              weixin //微信号
+              message //备注
+              money //租车赏金
+              manned //能否载人
+              rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
+              carImage //车辆图片
+              time //创建或修改时间（备注： 显示：1小时前，传值：时间戳）
+          },
           rentTime:[
                       {
                           week //求租周几： 周五
@@ -393,8 +405,6 @@
                           endTime //求租的结束时间
                       }	
                     ]
-          time //创建或修改时间（备注： 显示：1小时前，传值：时间戳）
-      	rent //1：发布展示 2：发布未展示
       }
       ```
 
@@ -437,20 +447,25 @@
 
   - 删除： `/user/publish/delete`
 
-    -  前端请求： 
+    - 前端请求： 
 
       ```json
       {
           publishId //求租帖子 id
+          openId
       }
       ```
 
     - 后台返回：
 
       ```json
+      //成功
       {
-          status: 200
-          msg: OK
+          openId
+      }
+      //失败
+      {
+          openId: -1
       }
       ```
 
