--- a/【驴伙伴】接口文档.md
+++ b/【驴伙伴】接口文档.md
@@ -1,4 +1,4 @@
-﻿# 【驴伙伴】接口文档
+# 【驴伙伴】接口文档
 ## 1. 空闲车 rent
 
 - 页面自动加载空闲车信息： `/rent/list`
@@ -550,3 +550,6 @@
 ## 自动表更新
 
 > 凌晨两点对 used 与 rent 表中与 user 表不同的地方进行自动更新
+
+//需要修改的部分
+1. 微信号应该在发布时填写，只租不发布的用户不需要填写微信，填写认证信息就够了
