--- a/【驴伙伴】接口文档.md
+++ b/【驴伙伴】接口文档.md
@@ -22,6 +22,10 @@
             money //租车赏金
             carImage //车辆图片
             manned //0:可载人 1：不可 2：不限
+            beginyyyy //2019-01-01
+            beginTime //08:00
+            endyyyy://2019-01-02
+            endTime: //08:00
             rentTime:[
             			{
             				week //求租周几： 1->周一,2-->周二
@@ -70,6 +74,10 @@
             money //租车赏金
             carImage //车辆图片
             manned //0:可载人 1：不可 2：不限
+            beginyyyy
+            beginTime
+            endyyyy
+            endTime 
             rentTime:[
             			{
             				week //求租周几： 1->周一,2-->周二
@@ -78,7 +86,7 @@
         				}	
             		  ]
             time //创建或修改时间（备注： 显示：1小时前，传值：时间戳）
-    		rent //1：发布展示 2：发布未展示
+    		    rent //1：发布展示 2：发布未展示
         }
     ]
     ```
@@ -134,6 +142,7 @@
         week //求租周几： 1->周一,2-->周二
         beginTime //求租的开始时间 hh:mm
         endTime //求租的结束时间 hh:mm
+        status //0:未接单 1：已接单
     }
     ```
 
@@ -338,6 +347,10 @@
               rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
               carImage //车辆图片
               time //创建或修改时间（备注： 显示：1小时前，传值：时间戳）
+              beginyyyy //2019-01-01
+              beginTime //08:00
+              endyyyy://2019-01-02
+              endTime: //08:00
           },
           rentTime:[
                       {
@@ -368,6 +381,10 @@
           manned //能否载人
           rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
           carImage //车辆图片
+          beginyyyy //2019-01-01
+          beginTime //08:00
+          endyyyy://2019-01-02
+          endTime: //08:00
           rentTime:[
                       {
                           week //求租周几： 周五
@@ -425,7 +442,6 @@
     - 后台返回：
 
       ```json
-      [
           {
       		publishId //求租帖子 id
               openId //发布者id
@@ -442,7 +458,6 @@
               beginTime //求租的开始时间 hh:mm
               endTime //求租的结束时间 hh:mm
           }
-      ]
       ```
 
   - 删除： `/user/publish/delete`
@@ -548,5 +563,16 @@
       ```
 
 ## 自动表更新
-
 > 凌晨两点对 used 与 rent 表中与 user 表不同的地方进行自动更新
+
+1. 帖子按发布时间先后排序
+2. 出租贴添加出租时段（后台不要求全部填写，由前端判断）
+beginyyyy:
+beginTime:
+endyyyy:
+endTime: 
+修改位置：`/user/rent/add` 
+3. 和出租贴一样，求租贴个人只能发布一条，且添加状态字段：state: //0:未接单； 1：已接单
+修改位置：`/publish/add`   `/user/publish/list` //数组改为单个json
+
+4. 添加帖子浏览次数
