--- a/【驴伙伴】接口文档.md
+++ b/【驴伙伴】接口文档.md
@@ -1,4 +1,4 @@
-﻿# 【驴伙伴】接口文档
+# 【驴伙伴】接口文档
 ## 1. 空闲车 rent
 
 - 页面自动加载空闲车信息： `/rent/list`
@@ -427,7 +427,7 @@
       ```json
       [
           {
-      		publishId //求租帖子 id
+      		    publishId //求租帖子 id
               openId //发布者id
               nickName //发布者昵称
               gender //性别 0：女 1：男
@@ -552,6 +552,19 @@
 > 凌晨两点对 used 与 rent 表中与 user 表不同的地方进行自动更新
 
 //需要修改的部分
-1. 发布出租贴无money 
+1. 帖子按发布时间先后排序
+2. 出租贴添加出租时段（后台不要求全部填写，由前端判断）
+beginyyyy:
+beginTime:
+endyyyy:
+endTime: 
+3. 和出租贴一样，求租贴个人只能发布一条，且添加状态字段：state: //0:未接单； 1：已接单
+4. 添加帖子浏览次数
 
-//
+//前端
+1. 发布后回到rent页面自动刷新
+2. 更新信息后回到me页面自动刷新
+3. 帖子时间未处理（->1分钟前）
+
+4. 附近
+5. 
