dev1 used not finished

--- a/【驴伙伴】接口文档.md
+++ b/【驴伙伴】接口文档.md
@@ -1,4 +1,4 @@
-# 【驴伙伴】接口文档
+﻿# 【驴伙伴】接口文档
 ## 1. 空闲车 rent
 
 - 页面自动加载空闲车信息： `/rent/list`
@@ -427,7 +427,7 @@
       ```json
       [
           {
-      		    publishId //求租帖子 id
+      		publishId //求租帖子 id
               openId //发布者id
               nickName //发布者昵称
               gender //性别 0：女 1：男
@@ -520,7 +520,7 @@
           usedImage //二手车图片
           message //发布信息
           //user 表与 used 表
-          used //二手车信息展示 0：未发布 1：发布未出售 2：发布未出售
+          used //二手车信息展示 0：未发布 1：发布未出售 2：发布已出售
           money //出手金额 
           createTime //创建时间（备注： 显示：1小时前，传值：时间戳）
       }
@@ -552,19 +552,11 @@
 > 凌晨两点对 used 与 rent 表中与 user 表不同的地方进行自动更新
 
 //需要修改的部分
-1. 帖子按发布时间先后排序
-2. 出租贴添加出租时段（后台不要求全部填写，由前端判断）
-beginyyyy:
-beginTime:
-endyyyy:
-endTime: 
-3. 和出租贴一样，求租贴个人只能发布一条，且添加状态字段：state: //0:未接单； 1：已接单
-4. 添加帖子浏览次数
-
+1. 帖子未按照时间顺序排序
+2. 登录校验
+3. 
 //前端
 1. 发布后回到rent页面自动刷新
 2. 更新信息后回到me页面自动刷新
 3. 帖子时间未处理（->1分钟前）
-
-4. 附近
-5. 
+4. add页面先判断是否已经发过帖子
