重构后的接口

--- a/【驴伙伴】接口文档.md
+++ b/【驴伙伴】接口文档.md
@@ -10,31 +10,31 @@
     ```json
     [
         {
-            rentId //帖子id
-            openId //发布者id
-            nickName //发布者昵称
-            gender //性别 0：女 1：男
-            avatarUrl //发布者头像
-            area //发布者宿舍区：韵苑
-    		areaNum //发布者楼栋：16栋（传数字）
-            weixin //微信号
-            message //备注
-            money //租车赏金
-            carImage //车辆图片
-            manned //0:可载人 1：不可 2：不限
-            beginyyyy //2019-01-01
-            beginTime //08:00
-            endyyyy://2019-01-02
-            endTime: //08:00
+            rent:{
+                rentId //帖子id
+                openId //发布者id
+                nickName //发布者昵称
+                gender //性别 0：女 1：男
+                avatarUrl //发布者头像
+                area //发布者宿舍区：韵苑
+                areaNum //发布者楼栋：16栋（传数字）
+                weixin //微信号
+                message //备注
+                money //租车赏金
+                manned //能否载人
+                rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
+                carImage //车辆图片
+                time //创建或修改时间（备注： 显示：1小时前，传值：时间戳）
+                count //阅读数
+            },
             rentTime:[
             			{
             				week //求租周几： 1->周一,2-->周二
             				beginTime //求租的开始时间 hh:mm
             				endTime //求租的结束时间
         				}	
-            		  ]
-            time //创建或修改时间（备注： 显示：1小时前，传值：时间戳）
-    		rent //1：发布展示 2：发布未展示
+            		  ],
+            favorite //是否收藏: 0: 否 1：是
         }
     ]
     ```
@@ -62,36 +62,80 @@
     ```json
     [
         {
-            rentId //帖子id
-            openId //发布者id
-            nickName //发布者昵称
-            gender //性别 0：女 1：男
-            avatarUrl //发布者头像
-            area //发布者宿舍区：韵苑
-    		areaNum //发布者楼栋：16栋（传数字）
-            weixin //微信号
-            message //备注
-            money //租车赏金
-            carImage //车辆图片
-            manned //0:可载人 1：不可 2：不限
-            beginyyyy
-            beginTime
-            endyyyy
-            endTime 
+            {
+            rent:{
+                rentId //帖子id
+                openId //发布者id
+                nickName //发布者昵称
+                gender //性别 0：女 1：男
+                avatarUrl //发布者头像
+                area //发布者宿舍区：韵苑
+                areaNum //发布者楼栋：16栋（传数字）
+                weixin //微信号
+                message //备注
+                money //租车赏金
+                manned //能否载人
+                rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
+                carImage //车辆图片
+                time //创建或修改时间（备注： 显示：1小时前，传值：时间戳）
+                count //阅读数
+            },
             rentTime:[
             			{
             				week //求租周几： 1->周一,2-->周二
             				beginTime //求租的开始时间 hh:mm
             				endTime //求租的结束时间
         				}	
-            		  ]
-            time //创建或修改时间（备注： 显示：1小时前，传值：时间戳）
-    		    rent //1：发布展示 2：发布未展示
+            		  ],
+    		favorite //是否收藏: 0: 否 1：是
         }
     ]
     ```
 
+- 添加或取消收藏： `/rent/favorite`
+
+  - 前端请求：
+
+    ```json
+    {
+        rentId //帖子id
+        openId //发布者id
+        favorite //未收藏： 1，已收藏： 0
+    }
+    ```
+
+  - 后台返回：前端收到结果，自己采用类似 ajax 处理
+
+    ```json
+    {
+        rentId //帖子id
+        openId //发布者id
+        favorite //是否收藏: 0: 否 1：是
+    }
+    ```
+
+- 统计阅读数：`/rent/count`
+
+  - 前端请求：
+
+    ```json
+    {
+        rentId //帖子id
+        count //count + 1
+    }
+    ```
+
+  - 后台返回：前端收到结果，自己采用类似 ajax 处理
+
+    ```json
+    {
+        rentId //帖子id
+        count //阅读数
+    }
+    ```
+
 ## 2. 想租车 publish
+
 - 查看接口：`/publish/list` 
 
   - 前端请求： 在 `onLoad()` 中自动请求该接口
@@ -116,6 +160,9 @@
             beginTime //求租的开始时间 hh:mm
             endTime //求租的结束时间 hh:mm
             createTime //创建时间（备注： 显示：1小时前，传值：时间戳）
+            status //0:未接单 1：已接单
+            count //阅读数
+            favorite //是否收藏: 0: 否 2：是
         },
         {
             //...
@@ -142,7 +189,9 @@
         week //求租周几： 1->周一,2-->周二
         beginTime //求租的开始时间 hh:mm
         endTime //求租的结束时间 hh:mm
+        //发布时，默认为 0
         status //0:未接单 1：已接单
+        count //阅读数
     }
     ```
 
@@ -150,7 +199,65 @@
 
     ```json
     {
-        openId
+        publishId //id
+        openId //发布者id
+        nickName //发布者昵称
+        gender //性别 0：女 1：男
+        avatarUrl //发布者头像
+        area //发布者宿舍区：韵苑
+        areaNum //发布者楼栋：16栋（传数字）
+        weixin //微信号
+        message //发布信息
+        money //租车赏金
+        yyyy //求租年月日： yyyy-MM-dd
+        week //求租周几： 1->周一,2-->周二
+        beginTime //求租的开始时间 hh:mm
+        endTime //求租的结束时间 hh:mm
+        //发布时，默认为 0
+        status //0:未接单 1：已接单
+        count //阅读数
+    }
+    ```
+
+- 添加或取消收藏：`/publish/favorite`
+
+  - 前端请求：
+
+    ```json
+    {
+        publishId //id
+        openId //发布者id
+        favorite //未收藏： 2，已收藏： 0
+    }
+    ```
+
+  - 后台返回：前端收到结果，自己采用类似 ajax 处理
+
+    ```json
+    {
+        publishId //id
+        openId //发布者id
+        favorite //是否收藏: 0: 否 2：是
+    }
+    ```
+
+- 统计阅读数：`/publish/count`
+
+  - 前端请求：
+
+    ```json
+    {
+        publishId //id
+        count
+    }
+    ```
+
+  - 后台返回：前端收到结果，自己采用类似 ajax 处理
+
+    ```json
+    {
+        publishId //id
+        count
     }
     ```
 
@@ -177,11 +284,56 @@
             message //发布信息
             money //出手金额 
             createTime //创建时间（备注： 显示：1小时前，传值：时间戳）
+            used //二手车信息展示 0：未发布 1：发布未出售 2：发布已出售
+            count //阅读数
+            favorite //是否收藏: 0: 否 3：是
         },
         {
             //...
         }
     ]
+    ```
+
+- 添加或取消收藏：`/used/favorite`
+
+  - 前端请求：
+
+    ```json
+    {
+        usedId //id
+        openId //发布者id
+        favorite //未收藏： 3，已收藏： 0
+    }
+    ```
+
+  - 后台返回：前端收到结果，自己采用类似 ajax 处理
+
+    ```json
+    {
+        usedId //id
+        openId //发布者id
+        favorite //是否收藏: 0: 否 3：是
+    }
+    ```
+
+- 统计阅读数：`/used/count`
+
+  - 前端请求：
+
+    ```json
+    {
+        usedId //id
+        count
+    }
+    ```
+
+  - 后台返回：前端收到结果，自己采用类似 ajax 处理
+
+    ```json
+    {
+        usedId //id
+        count
+    }
     ```
 
 ## 4. 买修车 repair
@@ -259,9 +411,6 @@
     	area //宿舍区：韵苑
     	areaNum //楼栋：16栋
     	weixin
-        //下面两个字段前端不请求，后台默认为 0，当发布帖子时尽心修改
-        //rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
-        //used //二手车信息展示 0：未发布 1：发布未出售 2：发布未出售
     }
     ```
 
@@ -279,8 +428,6 @@
     	area //宿舍区：韵苑
     	areaNum //楼栋：16栋
     	weixin
-        rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
-        used //二手车信息展示 0：未发布 1：发布未出售 2：发布未出售
     }
     ```
 
@@ -309,8 +456,6 @@
     	area //宿舍区：韵苑
     	areaNum //楼栋：16栋
     	weixin
-        rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
-        used //二手车信息展示 0：未发布 1：发布未出售 2：发布未出售
     }
     ```
 
@@ -347,10 +492,7 @@
               rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
               carImage //车辆图片
               time //创建或修改时间（备注： 显示：1小时前，传值：时间戳）
-              beginyyyy //2019-01-01
-              beginTime //08:00
-              endyyyy://2019-01-02
-              endTime: //08:00
+              count //阅读数
           },
           rentTime:[
                       {
@@ -363,6 +505,8 @@
       ```
 
   - 修改或添加：`/user/rent/add`
+
+    > 当首次添加时，选择图片时，已经自动创建了一条数据，所以会有 rentId
 
     - 前端请求： 
 
@@ -381,10 +525,7 @@
           manned //能否载人
           rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
           carImage //车辆图片
-          beginyyyy //2019-01-01
-          beginTime //08:00
-          endyyyy://2019-01-02
-          endTime: //08:00
+          count //阅读数
           rentTime:[
                       {
                           week //求租周几： 周五
@@ -414,6 +555,7 @@
               rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
               carImage //车辆图片
               time //创建或修改时间（备注： 显示：1小时前，传值：时间戳）
+              count //阅读数
           },
           rentTime:[
                       {
@@ -442,22 +584,25 @@
     - 后台返回：
 
       ```json
-          {
-      		publishId //求租帖子 id
-              openId //发布者id
-              nickName //发布者昵称
-              gender //性别 0：女 1：男
-              avatarUrl //发布者头像
-              area //发布者宿舍区：韵苑
-              areaNum //发布者楼栋：16栋（传数字）
-              weixin //微信号
-              message //发布信息
-              money //租车赏金
-              yyyy //求租年月日： yyyy-MM-dd
-              week //求租周几： 1->周一,2-->周二
-              beginTime //求租的开始时间 hh:mm
-              endTime //求租的结束时间 hh:mm
-          }
+      {
+          publishId //求租帖子 id
+          openId //发布者id
+          nickName //发布者昵称
+          gender //性别 0：女 1：男
+          avatarUrl //发布者头像
+          area //发布者宿舍区：韵苑
+          areaNum //发布者楼栋：16栋（传数字）
+          weixin //微信号
+          message //发布信息
+          money //租车赏金
+          yyyy //求租年月日： yyyy-MM-dd
+          week //求租周几： 1->周一,2-->周二
+          beginTime //求租的开始时间 hh:mm
+          endTime //求租的结束时间 hh:mm
+          createTime //创建时间
+          status //0:未接单 1：已接单
+      	count //阅读数
+      }
       ```
 
   - 删除： `/user/publish/delete`
@@ -512,9 +657,10 @@
           weixin //微信号
           usedImage //二手车图片
           message //发布信息
-          used //二手车信息展示 0：未发布 1：发布未出售 2：发布未出售
+          used //二手车信息展示 0：未发布 1：发布未出售 2：发布已出售
           money //出手金额 
           createTime //创建时间（备注： 显示：1小时前，传值：时间戳）
+          count //阅读数
       }
       ```
 
@@ -534,10 +680,10 @@
           weixin //微信号
           usedImage //二手车图片
           message //发布信息
-          //user 表与 used 表
-          used //二手车信息展示 0：未发布 1：发布未出售 2：发布未出售
+          used //二手车信息展示 0：未发布 1：发布未出售 2：发布已出售
           money //出手金额 
           createTime //创建时间（备注： 显示：1小时前，传值：时间戳）
+          count //阅读数
       }
       ```
 
@@ -555,24 +701,97 @@
           weixin //微信号
           usedImage //二手车图片
           message //发布信息
-          //user 表与 used 表
-          used //二手车信息展示 0：未发布 1：发布未出售 2：发布未出售
+          used //二手车信息展示 0：未发布 1：发布未出售 2：发布已出售
           money //出手金额 
           createTime //创建时间（备注： 显示：1小时前，传值：时间戳）
+          count //阅读数
       }
       ```
 
-## 自动表更新
-> 凌晨两点对 used 与 rent 表中与 user 表不同的地方进行自动更新
+### 5. 我的收藏
 
-1. 帖子按发布时间先后排序
-2. 出租贴添加出租时段（后台不要求全部填写，由前端判断）
-beginyyyy:
-beginTime:
-endyyyy:
-endTime: 
-修改位置：`/user/rent/add` 
-3. 和出租贴一样，求租贴个人只能发布一条，且添加状态字段：state: //0:未接单； 1：已接单
-修改位置：`/publish/add`   `/user/publish/list` //数组改为单个json
+- 显示我的收藏列表： `/user/favorites`
 
-4. 添加帖子浏览次数
+  - 前端请求：
+
+    ```json
+    {
+        openId
+    }
+    ```
+
+  - 后台返回：
+
+    ```json
+    {
+        rent:[
+            {
+                rent:{
+                    rentId //帖子id
+                    openId //发布者id
+                    nickName //发布者昵称
+                    gender //性别 0：女 1：男
+                    avatarUrl //发布者头像
+                    area //发布者宿舍区：韵苑
+                    areaNum //发布者楼栋：16栋（传数字）
+                    weixin //微信号
+                    message //备注
+                    money //租车赏金
+                    manned //能否载人
+                    rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
+                    carImage //车辆图片
+                    time //创建或修改时间（备注： 显示：1小时前，传值：时间戳）
+                    count //阅读数
+                },
+                rentTime:[
+                            {
+                                week //求租周几： 周五
+                                beginTime //求租的开始时间 hh:mm
+                                endTime //求租的结束时间
+                            }	
+                          ]
+            }
+        ],
+        publish:[
+            {
+                publishId //求租帖子 id
+                openId //发布者id
+                nickName //发布者昵称
+                gender //性别 0：女 1：男
+                avatarUrl //发布者头像
+                area //发布者宿舍区：韵苑
+                areaNum //发布者楼栋：16栋（传数字）
+                weixin //微信号
+                message //发布信息
+                money //租车赏金
+                yyyy //求租年月日： yyyy-MM-dd
+                week //求租周几： 1->周一,2-->周二
+                beginTime //求租的开始时间 hh:mm
+                endTime //求租的结束时间 hh:mm
+                createTime //创建时间
+                status //0:未接单 1：已接单
+                count //阅读数
+            }
+        ],
+        used:[
+            {
+                usedId //帖子id
+                openId //发布者id
+                nickName //发布者昵称
+                gender //性别 0：女 1：男
+                avatarUrl //发布者头像
+                area //发布者宿舍区：韵苑
+                areaNum //发布者楼栋：16栋（传数字）
+                weixin //微信号
+                usedImage //二手车图片
+                message //发布信息
+                used //二手车信息展示 0：未发布 1：发布未出售 2：发布已出售
+                money //出手金额 
+                createTime //创建时间（备注： 显示：1小时前，传值：时间戳）
+                count //阅读数
+            }
+        ]
+    }
+    ```
+
+    
