--- a/【驴伙伴】接口文档.md
+++ b/【驴伙伴】接口文档.md
@@ -1,4 +1,10 @@
 ﻿# 【驴伙伴】接口文档
+
+> - 当操作错误时，均返回 `{openId: -1}`，所以前端注意错误检测
+>
+> - 前端展示消息时，注意从后往前展示（把最近发布消息显示在最前面）
+> - 前端只有一个请求参数时，请求参数直接写在 url 后面
+
 ## 1. 空闲车 rent
 
 - 页面自动加载空闲车信息： `/rent/list`
@@ -92,36 +98,16 @@
     ]
     ```
 
-- 添加或取消收藏： `/rent/favorite`
-
-  - 前端请求：
-
-    ```json
-    {
-        rentId //帖子id
-        openId //发布者id
-        favorite //未收藏： 1，已收藏： 0
-    }
-    ```
-
-  - 后台返回：前端收到结果，自己采用类似 ajax 处理
-
-    ```json
-    {
-        rentId //帖子id
-        openId //发布者id
-        favorite //是否收藏: 0: 否 1：是
-    }
-    ```
+- 添加或取消收藏： 参看 5.5 的 `/user/favorite/change` 接口
 
 - 统计阅读数：`/rent/count`
 
-  - 前端请求：
+  - 前端请求： 参数写在 url 后面
 
     ```json
     {
         rentId //帖子id
-        count //count + 1
+        count //count + 1(数字)
     }
     ```
 
@@ -129,7 +115,6 @@
 
     ```json
     {
-        rentId //帖子id
         count //阅读数
     }
     ```
@@ -145,23 +130,25 @@
     ```json
     [
         {
-            publishId //帖子 id
-            openId //发布者id
-            nickName //发布者昵称
-            gender //性别 0：女 1：男
-            avatarUrl //发布者头像
-            area //发布者宿舍区：韵苑
-    		areaNum //发布者楼栋：16栋（传数字）
-            weixin //微信号
-            message //发布信息
-            money //租车赏金
-            yyyy //求租年月日： yyyy-MM-dd
-            week //求租周几： 1->周一,2-->周二
-            beginTime //求租的开始时间 hh:mm
-            endTime //求租的结束时间 hh:mm
-            createTime //创建时间（备注： 显示：1小时前，传值：时间戳）
-            status //0:未接单 1：已接单
-            count //阅读数
+            publish:{
+                publishId //帖子 id
+                openId //发布者id
+                nickName //发布者昵称
+                gender //性别 0：女 1：男
+                avatarUrl //发布者头像
+                area //发布者宿舍区：韵苑
+                areaNum //发布者楼栋：16栋（传数字）
+                weixin //微信号
+                message //发布信息
+                money //租车赏金
+                yyyy //求租年月日： yyyy-MM-dd
+                week //求租周几： 1->周一,2-->周二
+                beginTime //求租的开始时间 hh:mm
+                endTime //求租的结束时间 hh:mm
+                createTime //创建时间（备注： 显示：1小时前，传值：时间戳）
+                status //0:未接单 1：已接单
+                count //阅读数
+            }
             favorite //是否收藏: 0: 否 2：是
         },
         {
@@ -219,36 +206,16 @@
     }
     ```
 
-- 添加或取消收藏：`/publish/favorite`
-
-  - 前端请求：
-
-    ```json
-    {
-        publishId //id
-        openId //发布者id
-        favorite //未收藏： 2，已收藏： 0
-    }
-    ```
-
-  - 后台返回：前端收到结果，自己采用类似 ajax 处理
-
-    ```json
-    {
-        publishId //id
-        openId //发布者id
-        favorite //是否收藏: 0: 否 2：是
-    }
-    ```
+- 添加或取消收藏：添加或取消收藏： 参看 5.5 的 `/user/favorite/change` 接口
 
 - 统计阅读数：`/publish/count`
 
-  - 前端请求：
+  - 前端请求： 参数写在 url 后面
 
     ```json
     {
         publishId //id
-        count
+        count //(数字)
     }
     ```
 
@@ -256,7 +223,6 @@
 
     ```json
     {
-        publishId //id
         count
     }
     ```
@@ -272,20 +238,22 @@
     ```json
     [
         {
-            usedId //帖子id
-            openId //发布者id
-            nickName //发布者昵称
-            gender //性别 0：女 1：男
-            avatarUrl //发布者头像
-            area //发布者宿舍区：韵苑
-    		areaNum //发布者楼栋：16栋（传数字）
-            weixin //微信号
-            usedImage //二手车图片
-            message //发布信息
-            money //出手金额 
-            createTime //创建时间（备注： 显示：1小时前，传值：时间戳）
-            used //二手车信息展示 0：未发布 1：发布未出售 2：发布已出售
-            count //阅读数
+            used:{
+                usedId //帖子id
+                openId //发布者id
+                nickName //发布者昵称
+                gender //性别 0：女 1：男
+                avatarUrl //发布者头像
+                area //发布者宿舍区：韵苑
+                areaNum //发布者楼栋：16栋（传数字）
+                weixin //微信号
+                usedImage //二手车图片
+                message //发布信息
+                money //出手金额 
+                createTime //创建时间（备注： 显示：1小时前，传值：时间戳）
+                used //二手车信息展示 0：未发布 1：发布未出售 2：发布已出售
+                count //阅读数
+            }
             favorite //是否收藏: 0: 否 3：是
         },
         {
@@ -294,15 +262,16 @@
     ]
     ```
 
-- 添加或取消收藏：`/used/favorite`
+- 添加或取消收藏：添加或取消收藏： 参看 5.5 的 `/user/favorite/change` 接口
 
-  - 前端请求：
+- 统计阅读数：`/used/count` 
+
+  - 前端请求：参数写在 url 后面
 
     ```json
     {
         usedId //id
-        openId //发布者id
-        favorite //未收藏： 3，已收藏： 0
+        count //(数字)
     }
     ```
 
@@ -310,29 +279,7 @@
 
     ```json
     {
-        usedId //id
-        openId //发布者id
-        favorite //是否收藏: 0: 否 3：是
-    }
-    ```
-
-- 统计阅读数：`/used/count`
-
-  - 前端请求：
-
-    ```json
-    {
-        usedId //id
-        count
-    }
-    ```
-
-  - 后台返回：前端收到结果，自己采用类似 ajax 处理
-
-    ```json
-    {
-        usedId //id
-        count
+        count //(数字)
     }
     ```
 
@@ -710,7 +657,7 @@
 
 ### 5. 我的收藏
 
-- 显示我的收藏列表： `/user/favorites`
+- 显示我的收藏列表： `/user/favorite`
 
   - 前端请求：
 
@@ -720,7 +667,7 @@
     }
     ```
 
-  - 后台返回：
+  - 后台返回：注意检测消息是否为空（若没有收藏会显示空）
 
     ```json
     {
@@ -794,4 +741,29 @@
     }
     ```
 
-    
+- 添加或取消收藏： `/user/favorite/change` 
+
+  > rent  publish  used 的收藏的添加或取消都请求该接口
+
+  - 前端请求：
+
+    ```json
+    {
+        //帖子id： rent 传 rentId，publish 传 publishId，used 传 usedId
+        otherId 
+        openId //发布者id
+        //取消收藏： 0
+        //添加收藏： rent 传 1，publish 传 2，used 传 3
+        type 
+    }
+    ```
+
+  - 后台返回：前端收到结果，自己采用类似 ajax 处理
+
+    ```json
+    {
+        otherId //帖子id
+        openId //发布者id
+        type //是否收藏: 0: 否 1/2/3：是
+    }
+    ```
