--- a/【驴伙伴】接口文档.md
+++ b/【驴伙伴】接口文档.md
@@ -227,6 +227,25 @@
     }
     ```
 
+- 求租状态修改： `/publish/status`
+
+  - 前端请求：
+
+    ```json
+    {
+        publishId //id
+        status //0:未接单 1：已接单
+    }
+    ```
+
+  - 后台返回： 前端收到结果，自己采用类似 ajax 处理
+
+    ```json
+    {
+        status //0:未接单 1：已接单
+    }
+    ```
+
 ## 3. 二手车 used
 
 - 页面自动加载二手车信息： `/used/list`
@@ -514,6 +533,25 @@
       }
       ```
 
+- 出租状态修改：`/user/rent/rent`
+
+  - 前端请求： 参数直接接在 url 后
+
+    ```json
+    {
+        rentId
+        rent //出租信息展示 0：未发布 1：发布展示 2：发布未展示
+    }
+    ```
+
+  - 后台返回：前端收到结果，自己采用类似 ajax 处理
+
+    ```json
+    {
+        rent
+    }
+    ```
+
 ### 3. 我的求租
 
 - 我的求租： 
@@ -654,6 +692,25 @@
           count //阅读数
       }
       ```
+
+- 二手车状态修改：`/user/used/used`
+
+  - 前端请求： 参数直接接在 url 后
+
+    ```json
+    {
+        usedId
+        used //二手车信息展示 0：未发布 1：发布未出售 2：发布已出售
+    }
+    ```
+
+  - 后台返回：前端收到结果，自己采用类似 ajax 处理
+
+    ```json
+    {
+        used
+    }
+    ```
 
 ### 5. 我的收藏
 
