--- a/【驴伙伴】接口文档.md
+++ b/【驴伙伴】接口文档.md
@@ -473,6 +473,55 @@
   - 修改或添加：`/user/rent/add`
 
     > 当首次添加时，选择图片时，已经自动创建了一条数据，所以会有 rentId
+    >
+    > 请求的端口： `/user/rent/addCar`
+    >
+    > - 前端请求：
+    >
+    >   ```json
+    >   {
+    >       openId
+    >       //file 的 name:"car"
+    >   }
+    >   ```
+    >
+    >   案例：
+    >
+    >   ```js
+    >   changeCar: function() {
+    >       var that = this
+    >       wx.chooseImage({
+    >         count: 1,
+    >         sizeType: ['original'],
+    >         sourceType: ['album'],
+    >         success: function(res) {
+    >           var tempFilePaths = res.tempFilePaths
+    >           wx.uploadFile({
+    >             url: app.serverUrl + '/user/rent/addCar?openId=xxx',
+    >             filePath: tempFilePaths[0],
+    >             name: 'car',
+    >             success: function(res) {
+    >               var data = JSON.parse(res.data)
+    >               console.log(data.carImage)
+    >               that.setData({
+    >                 carImage: app.serverUrl + data.carImage
+    >               })
+    >             }
+    >           })
+    >         },
+    >       })
+    >   }
+    >   ```
+    >
+    > - 后台返回：
+    >
+    >   ```json
+    >   {
+    >       rentId
+    >       openId
+    >       carImage
+    >   }
+    >   ```
 
     - 前端请求： 
 
@@ -649,7 +698,58 @@
       }
       ```
 
-  - 修改： `user/used/change`
+  - 修改或添加： `user/used/change` 
+
+    > 当首次添加时，选择图片时，已经自动创建了一条数据，所以会有 usedId
+    >
+    > 请求的端口： `/user/used/addCar`
+    >
+    > - 前端请求：
+    >
+    >   ```json
+    >   {
+    >       openId
+    >       //file 的 name:"car"
+    >   }
+    >   ```
+    >
+    >   案例：
+    >
+    >   ```js
+    >   changeCar: function() {
+    >       var that = this
+    >       wx.chooseImage({
+    >         count: 1,
+    >         sizeType: ['original'],
+    >         sourceType: ['album'],
+    >         success: function(res) {
+    >           var tempFilePaths = res.tempFilePaths
+    >           wx.uploadFile({
+    >             url: app.serverUrl + '/user/used/addCar?openId=xxx',
+    >             filePath: tempFilePaths[0],
+    >             name: 'car',
+    >             success: function(res) {
+    >               var data = JSON.parse(res.data)
+    >               console.log(data.carImage)
+    >               that.setData({
+    >                 carImage: app.serverUrl + data.carImage
+    >               })
+    >             }
+    >           })
+    >         },
+    >       })
+    >   }
+    >   ```
+    >
+    > - 后台返回：
+    >
+    >   ```json
+    >   {
+    >       usedId
+    >       openId
+    >       usedImage
+    >   }
+    >   ```
 
     - 前端请求：
 
